Bracket whole UI on solar day
